3pqjvqe - Fix spacing on shogun pages

--- a/styles/components/announcement_banner.scss
+++ b/styles/components/announcement_banner.scss
@@ -254,3 +254,73 @@ time.announcement-countdown {
   }
 
 }
+
+/* WITH announcement banner sections adjustments */
+#ais-sort-filter.sticky-active{
+  top: 76px;
+  @media screen and (min-width: 40em) {
+    top: 46px;
+  }
+}
+
+.template-search.with-announcement-banner {
+  .main-content {
+    padding-top: 120px;
+  }
+  #ais-sort-filter.sticky-active{
+    top: 76px;
+  }
+  @media screen and (min-width: 40em) {
+    .main-content {
+      padding-top: 0px;
+    }
+  }
+  
+}
+
+.template-product.with-announcement-banner{
+  .de-PageWrap-main{
+    margin-top: 30px
+    
+  }
+}
+.template-collection.with-announcement-banner{
+  #ais-sort-filter.sticky-active{
+    top: 76px;
+  }
+  .de-PageWrap-main{
+  padding-top: 76px !important;
+  }
+  
+  .main-content{
+    padding-top: 70px !important;
+  }
+  
+  @media screen and (min-width: 40em) {
+    .de-PageWrap-main{
+      padding-top: 126px;
+    }
+    
+  .main-content{
+    padding-top: 50px !important;
+  }
+    
+  }
+  
+}
+
+.template-page.with-announcement-banner{
+  .de-PageWrap-main {
+    padding-top: 76px;
+  }
+  @media screen and (min-width: 40em){
+    .de-PageWrap-main {
+        padding-top: 88px;
+    }
+  }
+  @media screen and (min-width: 60em) {
+    .de-PageWrap-main {
+      padding-top: 136px;
+    }
+  }
+}
